--- a/src/style/ComoFunciona.css
+++ b/src/style/ComoFunciona.css
@@ -76,8 +76,8 @@
 
 /* #region CONTENEDOR */
 .section {
-    @apply relative bg-gradient-to-b from-[#F2F2F2] to-[#F2F2F2] py-28 px-4 md:px-8 scroll-mt-10 font-[Montserrat] 
-    max-h-[1200px]
+    @apply relative  py-28 px-4 md:px-8 scroll-mt-10 font-[Montserrat] 
+    mt-20
 }
 
 .contenedor-principal {
