--- a/src/style/Servicios.css
+++ b/src/style/Servicios.css
@@ -1,19 +1,16 @@
 .section {
-    @apply py-14 scroll-mt-20 font-[Montserrat] h-full 
+    @apply py-14 scroll-mt-20 font-[Montserrat] h-auto overflow-visible
 }
 
 .contenedor-servicios{
     @apply relative 
-     w-full h-full
+     w-full h-auto
 }
 
-.contenedor-tarjetas-superior{
-    @apply grid grid-cols-3 h-full w-full 
+.contenedor-tarjetas{
+    @apply h-full w-full 
 }
 
-.contenedor-tarjetas-inferior{
-    @apply grid grid-cols-2  h-full w-full px-10 mt-10
-}
 
 
 /* #region TEXT */
@@ -32,11 +29,12 @@
 /* #region TARJETA */
 .div-tarjeta{
     @apply flex flex-col items-start text-start bg-[#0b4ba2]  m-5
-    h-full rounded-[26px] shadow-[0_18px_48px_rgba(0,0,0,0.2)] text-white py-5 px-8
+    h-auto rounded-[26px] shadow-[0_18px_48px_rgba(0,0,0,0.2)] text-white 
+    py-5 px-8
 }
 
 .titulo-texto-tarjeta{
-    @apply col-span-4 text-white font-bold text-[18px] md:text-[20px] mb-4 text-center
+    @apply  text-white font-bold text-[18px] md:text-[20px] text-center ml-10
 }
 
 .linea-horizontal {
@@ -48,12 +46,15 @@
 }
 
 .contenedor-bullet-tarjeta{
-    @apply flex items-start gap-5
+    @apply flex  gap-5  items-center
 }
 
 .icono-tarjeta{
-    @apply invert brightness-0 w-[30px] 
+    @apply invert brightness-0 w-[30px] max-w-[30px] max-h-[30px]
 }
 
+.flecha-tarjeta{
+    @apply absolute -translate-y-7
+}
 
 /* #endregion */
