--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,7 @@
   --primary-light: #00aeef;                 /* Azul claro para resaltes/links */
   --secondary: #f3f4f6;                     /* Gris claro para bloques si se usa */
   --highlight: oklch(42.4% 0.199 265.638);  /* Azul para headers o secciones */
+
 }
 
 /* =========================
@@ -31,6 +32,11 @@
 
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+
+}
+@theme {
+
 }
 
 /* =========================
