--- a/src/style/ComoFunciona.css
+++ b/src/style/ComoFunciona.css
@@ -1,14 +1,16 @@
+/* #region BASES */
 :root{
     --azul: #0b4ba2;
 }
 
 .oculto{
-    @apply md:block hidden
+    @apply xl:block hidden
 }
 
 .espacio{
    @apply col-span-1 oculto
 }
+/* #endregion */
 
 /* #region GRAFICOS */
 .linea-Vertical {
@@ -19,6 +21,7 @@
 /* **************************************LINEA HORIZONTAL ************************************************/
 .linea-horizontal {
     @apply w-[40%] h-[6px] transform z-0  bg-[var(--azul)] oculto
+    3xl:translate-y-[200%]
 }
 
 .linea-horizontal-izquierda {
@@ -26,20 +29,25 @@
 }
 
 .linea-horizontal-derecha {
-    @apply linea-horizontal right-2/3 -translate-y-2 absolute top-1/4 translate-x-6
+    @apply linea-horizontal right-2/3 -translate-y-2 absolute top-1/4 
+    translate-x-6   2xl:translate-x-10
 }
 
 /* **************************************CUADRADO ************************************************/
 .cuadrado {
     @apply w-5 h-5 bg-[var(--azul)] absolute oculto
+    3xl:translate-y-[1%]
 }
 
 .cuadrado-izquierda{
-    @apply cuadrado -right-1/4 -translate-y-2/3 top-[27%] translate-x-[55%]
+    @apply cuadrado -right-1/4 -translate-y-2/3 top-[27%] 
+    translate-x-[55%]   xl:translate-x-[59%]    3xl:translate-x-[55%]
 }
 
 .cuadrado-derecha{
-    @apply cuadrado -left-[3%] -translate-y-2/3 top-[23%] translate-x-1.5
+    @apply cuadrado -left-[3%] -translate-y-2/3 top-[23%] 
+    2xl:translate-x-[30%]   3xl:translate-x-[45%] 
+    3xl:translate-y-[30%]
 }
 
 
@@ -48,50 +56,68 @@
 }
 
 .cuadrado-abajo{
-    @apply cuadrado left-[25%] -top-[20%] translate-x-3.5
+    @apply cuadrado left-[25%] -top-[20%] translate-x-2 
+    2xl:translate-x-[70%]   3xl:translate-x-[90%]
+    3xl:translate-y-[30%]
 }
 /* #endregion */
 
 /* #region IMAGENES */
 
 .imagen-paso-1 {
-    @apply w-32 h-32 absolute -left-12 top-4 -translate-y-1/2 oculto
+    @apply w-32 h-32 absolute  top-4 oculto
+     -translate-y-1/2   3xl:-translate-y-[40%]
+     -left-12           3xl:-left-[4%]
 }
 
 .imagen-paso-2 {
-    @apply w-40 h-40 absolute -right-36 top-[30%] -translate-y-1/2 oculto
+    @apply w-40 h-40 absolute  top-[30%]  oculto
+    -translate-y-1/2    3xl:-translate-y-[40%]
+    -right-36           3xl:-right-[22%]
 }
 
 .imagen-paso-3 {
-    @apply w-40 h-40 absolute -left-20 top-[20%] -translate-y-1/2 oculto
+    @apply w-40 h-40 absolute  top-[20%]  oculto
+    -translate-y-1/2    3xl:-translate-y-[40%]
+    -left-20            3xl:-left-[6%]
 }
 
 .imagen-paso-4 {
-    @apply w-36 h-36 absolute -right-32 top-[20%] -translate-y-1/2 oculto
+    @apply w-36 h-36 absolute  top-[20%]  oculto
+    -translate-y-1/2    3xl:-translate-y-[40%]
+    -right-32           3xl:-right-[18%]
 }
 
 .imagen-paso-5 { 
-     @apply w-40 h-40 absolute -left-20 top-[20%] -translate-y-1/2 oculto
+     @apply w-40 h-40 absolute  top-[20%]  oculto
+     -translate-y-1/2   3xl:-translate-y-[40%]
+     -left-20           3xl:-left-[8%]
 }
 
 .imagen-paso-6 {
-     @apply w-40 h-40 absolute -left-2 -top-[35%] oculto
+     @apply w-40 h-40 absolute   oculto
+     -top-[35%]         3xl:-top-[25%]
+     -left-2            3xl:left-[3%]
 }
 
 /* #endregion */
 
 /* #region CONTENEDOR */
 .section {
-    @apply relative  py-28 px-4 md:px-8 scroll-mt-10 font-[Montserrat] 
+    @apply relative  py-28 px-4 xl:px-8 scroll-mt-10 font-[Montserrat] 
     mt-20
 }
 
 .contenedor-principal {
-    @apply relative  md:mx-10 mb-10 flex flex-col mt-10
+    @apply relative  mb-10 flex flex-col mt-10
+    xl:mx-10
 }
 
 .grid-pasos {
-    @apply md:relative z-10 md:grid grid-cols-1  lg:grid-cols-2 md:mx-[18%]
+    @apply xl:relative z-10 
+    xl:grid 
+    xl:mx-[18%]     3xl:mx-[22%]
+    grid-cols-1     lg:grid-cols-2 
 }
 
 .div-titulo {
@@ -103,15 +129,16 @@
 }
 
 .contenedor-paso-izquierdo{
-    @apply contenedor-paso md:w-[80%] md:max-h-20
+    @apply contenedor-paso  md:max-h-20
+    xl:w-[80%]  
 }
 
 .contenedor-paso-derecho{
-    @apply contenedor-paso md:w-[90%] md:max-h-20
+    @apply contenedor-paso xl:w-[90%] md:max-h-20
 }
 
 .contenedor-paso-central{
-    @apply contenedor-paso w-full  md:mt-20 md:ml-[23%]
+    @apply contenedor-paso w-full  xl:mt-20 xl:ml-[23%]
 }
 
 .contenedor-informacion{
@@ -122,46 +149,70 @@
 
 /* #region TEXTO */
 .title {
-    @apply text-center text-blue-800  font-semibold text-4xl md:text-5xl mb-5 rounded-3xl py-1
+    @apply text-center text-blue-800  font-semibold  mb-5 rounded-3xl py-1
+    text-4xl md:text-5xl
 }
 
 .subtitulo-texto{
-    @apply text-center text-[#333333]  text-[16px] md:text-[18px] max-w-4xl mx-auto mb-10
+    @apply text-center text-[#333333]  max-w-4xl mx-auto mb-10
+    text-[16px] md:text-[18px]
 }
 
 
 .contenedor-paso-titulo{
-    @apply bg-[var(--azul)] rounded-xl text-white font-bold text-[20px] text-center
+    @apply bg-[var(--azul)] rounded-xl text-white font-bold  text-center
+    text-[20px] 3xl:text-[22px]
+    py-2        3xl:py-5
 }
 
 .contenedor-paso-titulo-izquierdo{
-    @apply contenedor-paso-titulo py-2 px-5 md:w-[90%] 
+    @apply contenedor-paso-titulo  px-5 
+    
+    xl:w-[90%] 3xl:w-[80%]
+    3xl:ml-10
 }
 
 .contenedor-paso-titulo-central{
-    @apply contenedor-paso-titulo py-2  px-5 md:pr-10 md:w-[40%] md:ml-20
+    @apply contenedor-paso-titulo  px-5 
+    xl:pr-10 
+    xl:w-[40%]  3xl:w-[40%]
+    xl:ml-20    3xl:ml-32 
+    
+    
 }
 
 .contenedor-paso-titulo-derecho{
-    @apply contenedor-paso-titulo  py-2  px-5 md:w-[90%] md:ml-28
+    @apply contenedor-paso-titulo px-5 
+    xl:w-[90%]  3xl:w-[70%]
+    xl:ml-28    3xl:ml-48
+    
 }
 
 
 
 .contenedor-paso-texto{
-    @apply text-[14px] text-[#333333] mt-5 md:mt-2 font-light text-center relative mb-5 md:mb-0
+    @apply text-[14px] text-[#333333]  font-light text-center relative 
+    mb-5    xl:mb-0
+    mt-5    md:mt-2
 }
 
 .contenedor-paso-texto-izquierdo{
-    @apply contenedor-paso-texto md:w-[70%] md:left-[10%] md:ml-3
+    @apply contenedor-paso-texto 
+    xl:w-[70%] 
+    xl:left-[10%] 
+    xl:ml-3
 }
 
 .contenedor-paso-texto-derecho{
-    @apply contenedor-paso-texto  md:w-[65%] md:left-[35%] 
+    @apply contenedor-paso-texto  
+    xl:w-[65%] 
+    xl:left-[35%] 
 }
 
 .contenedor-paso-texto-central{
-    @apply contenedor-paso-texto  md:w-[25%] md:left-[15%]
+    @apply contenedor-paso-texto  
+    xl:w-[25%] 
+    xl:left-[15%]
 }
 
 /* #endregion */
