--- a/src/style/ComoFunciona.css
+++ b/src/style/ComoFunciona.css
@@ -1,219 +1,424 @@
 /* #region BASES */
-:root{
+:root {
     --azul: #0b4ba2;
 }
 
-.oculto{
-    @apply xl:block hidden
+.oculto {
+    @apply lg:block hidden
 }
 
-.espacio{
-   @apply col-span-1 oculto
+.espacio {
+    @apply col-span-1 oculto
 }
+
 /* #endregion */
 
 /* #region GRAFICOS */
 .linea-Vertical {
-    @apply  absolute top-0 bottom-0 left-1/2 -translate-x-1/2 z-0
-    w-[6px]  bg-[var(--azul)] h-[82%] oculto
+    @apply absolute top-0 bottom-0 left-1/2 -translate-x-1/2 z-0 w-[6px] bg-[var(--azul)] h-[82%] oculto
 }
 
 /* **************************************LINEA HORIZONTAL ************************************************/
 .linea-horizontal {
-    @apply w-[40%] h-[6px] transform z-0  bg-[var(--azul)] oculto
-    3xl:translate-y-[200%]
+    @apply w-[40%] h-[6px] transform z-0 bg-[var(--azul)] oculto
 }
 
 .linea-horizontal-izquierda {
-    @apply linea-horizontal  -right-1/4 -translate-y-1/4 absolute top-2 -translate-x-1
+    @apply linea-horizontal -right-1/4 -translate-y-1/4 absolute top-2 -translate-x-1
 }
 
 .linea-horizontal-derecha {
-    @apply linea-horizontal right-2/3 -translate-y-2 absolute top-1/4 
-    translate-x-6   2xl:translate-x-10
+    @apply linea-horizontal right-2/3 -translate-y-2 absolute top-1/4 translate-x-6
 }
 
 /* **************************************CUADRADO ************************************************/
 .cuadrado {
     @apply w-5 h-5 bg-[var(--azul)] absolute oculto
-    3xl:translate-y-[1%]
 }
 
-.cuadrado-izquierda{
-    @apply cuadrado -right-1/4 -translate-y-2/3 top-[27%] 
-    translate-x-[55%]   xl:translate-x-[59%]    3xl:translate-x-[55%]
+.cuadrado-izquierda {
+    @apply cuadrado -right-1/4 -translate-y-2/3 top-[27%] translate-x-[55%]
 }
 
-.cuadrado-derecha{
-    @apply cuadrado -left-[3%] -translate-y-2/3 top-[23%] 
-    2xl:translate-x-[30%]   3xl:translate-x-[45%] 
-    3xl:translate-y-[30%]
+.cuadrado-derecha {
+    @apply cuadrado -left-[3%] -translate-y-2/3 top-[23%]
 }
 
 
-.cuadrado-arriba{
-    @apply cuadrado left-1/2 translate-y-1/2 -top-5 -translate-x-2.5 
+.cuadrado-arriba {
+    @apply cuadrado left-1/2 translate-y-1/2 -top-5 -translate-x-2.5
 }
 
-.cuadrado-abajo{
-    @apply cuadrado left-[25%] -top-[20%] translate-x-2 
-    2xl:translate-x-[70%]   3xl:translate-x-[90%]
-    3xl:translate-y-[30%]
+.cuadrado-abajo {
+    @apply cuadrado left-[25%] -top-[20%] translate-x-2
 }
+
 /* #endregion */
 
 /* #region IMAGENES */
 
 .imagen-paso-1 {
-    @apply w-32 h-32 absolute  top-4 oculto
-     -translate-y-1/2   3xl:-translate-y-[40%]
-     -left-12           3xl:-left-[4%]
+    @apply w-[80%] h-[80%]
 }
 
 .imagen-paso-2 {
-    @apply w-40 h-40 absolute  top-[30%]  oculto
-    -translate-y-1/2    3xl:-translate-y-[40%]
-    -right-36           3xl:-right-[22%]
+    @apply w-[90%] h-[90%]
 }
 
 .imagen-paso-3 {
-    @apply w-40 h-40 absolute  top-[20%]  oculto
-    -translate-y-1/2    3xl:-translate-y-[40%]
-    -left-20            3xl:-left-[6%]
+    @apply w-[90%] h-[80%] translate-y-3
 }
 
 .imagen-paso-4 {
-    @apply w-36 h-36 absolute  top-[20%]  oculto
-    -translate-y-1/2    3xl:-translate-y-[40%]
-    -right-32           3xl:-right-[18%]
+    @apply w-[90%] h-[80%] translate-y-5
 }
 
-.imagen-paso-5 { 
-     @apply w-40 h-40 absolute  top-[20%]  oculto
-     -translate-y-1/2   3xl:-translate-y-[40%]
-     -left-20           3xl:-left-[8%]
+.imagen-paso-5 {
+    @apply w-[80%] h-[80%] translate-y-6
 }
 
 .imagen-paso-6 {
-     @apply w-40 h-40 absolute   oculto
-     -top-[35%]         3xl:-top-[25%]
-     -left-2            3xl:left-[3%]
+    @apply w-[80%] h-[80%]
 }
 
 /* #endregion */
 
 /* #region CONTENEDOR */
 .section {
-    @apply relative  py-28 px-4 xl:px-8 scroll-mt-10 font-[Montserrat] 
-    mt-20
+    @apply relative py-28 px-4 scroll-mt-10 font-[Montserrat] mt-20
 }
 
 .contenedor-principal {
-    @apply relative  mb-10 flex flex-col mt-10
-    xl:mx-10
+    @apply relative mb-10 flex flex-col mt-10
 }
 
 .grid-pasos {
-    @apply xl:relative z-10 
-    xl:grid 
-    xl:mx-[18%]     3xl:mx-[22%]
-    grid-cols-1     lg:grid-cols-2 
+    @apply z-10 grid-cols-1
 }
 
 .div-titulo {
-    @apply max-w-6xl md:mx-auto mb-10;
+    @apply max-w-6xl mb-10;
 }
 
-.contenedor-paso{
-    @apply h-full relative flex flex-col
+.contenedor-paso {
+    @apply h-full relative grid grid-cols-2
 }
 
-.contenedor-paso-izquierdo{
-    @apply contenedor-paso  md:max-h-20
-    xl:w-[80%]  
+.contenedor-paso-izquierdo {
+    @apply contenedor-paso
 }
 
-.contenedor-paso-derecho{
-    @apply contenedor-paso xl:w-[90%] md:max-h-20
+.contenedor-paso-derecho {
+    @apply contenedor-paso
 }
 
-.contenedor-paso-central{
-    @apply contenedor-paso w-full  xl:mt-20 xl:ml-[23%]
+.contenedor-paso-central {
+    @apply contenedor-paso w-full col-span-1
 }
 
-.contenedor-informacion{
-    @apply grid grid-rows-2 
+.contenedor-informacion {
+    @apply grid grid-rows-2
 }
 
 /* #endregion */
 
 /* #region TEXTO */
 .title {
-    @apply text-center text-[#0b4ba2]  font-bold  mb-5 rounded-3xl py-1
-    text-[36px] md:text-[42px]
+    @apply text-center text-[var(--primary-blue)] font-bold mb-5 rounded-3xl py-1 text-[36px]
 }
 
-.subtitulo-texto{
-    @apply text-center text-[#333333]  max-w-4xl mx-auto mb-10
-    text-[16px] md:text-[18px]
+.subtitulo-texto {
+    @apply text-center text-[#333333] max-w-4xl mx-auto mb-10 text-[16px]
 }
 
-
-.contenedor-paso-titulo{
-    @apply bg-[var(--azul)] rounded-xl text-white font-bold  text-center
-    text-[20px] 3xl:text-[22px]
-    py-2        3xl:py-5
+.contenedor-paso-titulo {
+    @apply bg-[var(--azul)] rounded-xl text-white font-bold text-center text-[20px] px-5 flex items-center justify-center mt-5
 }
 
-.contenedor-paso-titulo-izquierdo{
-    @apply contenedor-paso-titulo  px-5 
-    
-    xl:w-[90%] 3xl:w-[80%]
-    3xl:ml-10
+.contenedor-paso-titulo-izquierdo {
+    @apply contenedor-paso-titulo
 }
 
-.contenedor-paso-titulo-central{
-    @apply contenedor-paso-titulo  px-5 
-    xl:pr-10 
-    xl:w-[40%]  3xl:w-[40%]
-    xl:ml-20    3xl:ml-32 
-    
-    
+.contenedor-paso-titulo-central {
+    @apply contenedor-paso-titulo
 }
 
-.contenedor-paso-titulo-derecho{
-    @apply contenedor-paso-titulo px-5 
-    xl:w-[90%]  3xl:w-[70%]
-    xl:ml-28    3xl:ml-48
-    
+.contenedor-paso-titulo-derecho {
+    @apply contenedor-paso-titulo
 }
 
-
-
-.contenedor-paso-texto{
-    @apply text-[14px] text-[#333333]  font-light text-center relative 
-    mb-5    xl:mb-0
-    mt-5    md:mt-2
+.contenedor-paso-texto {
+    @apply text-[14px] text-[#333333] font-light text-center relative mb-5 mt-5 col-span-2
 }
 
-.contenedor-paso-texto-izquierdo{
-    @apply contenedor-paso-texto 
-    xl:w-[70%] 
-    xl:left-[10%] 
-    xl:ml-3
+.contenedor-paso-texto-izquierdo {
+    @apply contenedor-paso-texto
 }
 
-.contenedor-paso-texto-derecho{
-    @apply contenedor-paso-texto  
-    xl:w-[65%] 
-    xl:left-[35%] 
+.contenedor-paso-texto-derecho {
+    @apply contenedor-paso-texto
 }
 
-.contenedor-paso-texto-central{
-    @apply contenedor-paso-texto  
-    xl:w-[25%] 
-    xl:left-[15%]
+.contenedor-paso-texto-central {
+    @apply contenedor-paso-texto
 }
 
 /* #endregion */
 
+@media (min-width: 500px) {
+
+    /* #region TEXTO */
+    .title {
+        @apply text-[42px]
+    }
+
+    .subtitulo-texto {
+        @apply text-[18px]
+    }
+
+    .contenedor-paso-texto {
+        @apply mt-2 col-span-2
+    }
+
+    .contenedor-paso-titulo {
+        @apply text-center text-[22px] py-2 px-5
+    }
+
+    .contenedor-paso-texto {
+        @apply text-[18px] mb-10
+    }
+
+    /* #endregion */
+
+
+    /* #region CONTENEDOR */
+    .div-titulo {
+        @apply mx-auto;
+    }
+
+    .contenedor-paso-izquierdo {
+        @apply max-h-[70%]
+    }
+
+    .contenedor-paso-derecho {
+        @apply max-h-[70%]
+    }
+
+    .contenedor-paso-central {
+        @apply col-span-2
+    }
+
+    .contenedor-principal {
+        @apply mt-10
+    }
+
+    /* #endregion */
+}
+
+@media (min-width: 1024px) {
+
+    /* #region TEXTO */
+    .contenedor-paso-titulo {
+        @apply text-[18px] px-5 items-center justify-center col-span-3
+    }
+
+    .contenedor-paso-texto {
+        @apply mb-0 text-[15px]
+    }
+
+    .contenedor-paso-titulo-izquierdo {
+        @apply w-[90%] h-[70%]
+    }
+
+    .contenedor-paso-titulo-central {
+        @apply w-[100%] col-span-3
+    }
+
+    .contenedor-paso-titulo-derecho {
+        @apply w-[90%] h-[60%] ml-[30%]
+    }
+
+    .contenedor-paso-texto {
+        @apply col-span-4
+    }
+
+    .contenedor-paso-texto-izquierdo {
+        @apply w-[90%] left-[0%]
+    }
+
+    .contenedor-paso-texto-derecho {
+        @apply w-[75%] left-[20%]
+    }
+
+    .contenedor-paso-texto-central {
+        @apply w-[80%] left-[20%]
+    }
+
+    /* #endregion */
+
+    /* #region GRAFICOS */
+
+
+
+    .linea-horizontal-izquierda {
+        @apply translate-y-[610%] mt-2
+    }
+
+    .linea-horizontal-derecha {
+        @apply translate-x-[-25%] translate-y-[350%] w-[25%]
+    }
+
+    .cuadrado-izquierda {
+        @apply cuadrado -right-1/4 -translate-y-2/3 top-[47%] translate-x-[50%]
+    }
+
+    .cuadrado-derecha {
+        @apply cuadrado -translate-y-2/3 top-[47%] translate-x-[15%]
+    }
+
+    .cuadrado-abajo {
+        @apply cuadrado left-[50%] -top-[50%] translate-x-2
+    }
+
+    /* #endregion */
+
+    /* #region IMAGENES */
+
+    .imagen-paso-1 {
+        @apply w-32 h-32 translate-x-[-10%] translate-y-[1%]
+    }
+
+    .imagen-paso-2 {
+        @apply w-48 h-32 translate-x-[10%] translate-y-[-20%]
+    }
+
+    .imagen-paso-3 {
+        @apply w-40 h-32 translate-x-[-20%] translate-y-[-20%]
+    }
+
+    .imagen-paso-4 {
+        @apply w-36 h-28 translate-x-[20%] translate-y-[-20%]
+    }
+
+    .imagen-paso-5 {
+        @apply w-40 h-28 translate-x-[-20%] translate-y-[-20%]
+    }
+
+    .imagen-paso-6 {
+        @apply w-36 h-16 z-10 translate-y-[-30%]
+    }
+
+    /* #endregion */
+
+    /* #region CONTENEDOR */
+    .section {
+        @apply px-8
+    }
+
+    .contenedor-principal {
+        @apply mx-0
+    }
+
+    .contenedor-paso {
+        @apply h-full relative grid grid-cols-4
+    }
+
+    .grid-pasos {
+        @apply relative grid mx-[10%] grid-cols-2
+    }
+
+    .contenedor-paso-izquierdo {
+        @apply w-[80%]
+    }
+
+    .contenedor-paso-derecho {
+        @apply w-[90%]
+    }
+
+    .contenedor-paso-central {
+        @apply mt-20 ml-[28%] w-[40%]
+    }
+
+    /* #endregion */
+}
+
+@media (min-width: 2000px) {
+
+    /* #region TEXTO */
+    .contenedor-paso-titulo {
+        @apply text-[22px] py-2
+    }
+
+    .contenedor-paso-titulo-izquierdo {
+        @apply w-[80%] ml-10
+    }
+
+    .contenedor-paso-titulo-central {
+        @apply w-[90%] 
+    }
+
+    .contenedor-paso-titulo-derecho {
+        @apply w-[70%] ml-48
+    }
+
+    /* #endregion */
+
+    /* #region GRAFICOS */
+    .linea-horizontal-izquierda {
+        @apply translate-y-[550%] 
+    }
+
+    .linea-horizontal-derecha {
+        @apply translate-x-[15%] translate-y-[350%] w-[40%]
+    }
+
+    .cuadrado-izquierda {
+        @apply cuadrado -right-1/4  top-[55%] translate-x-[50%]
+    }
+
+    .cuadrado-derecha {
+        @apply cuadrado  top-[45%] translate-x-[50%]
+    }
+
+    .cuadrado-abajo {
+        @apply cuadrado left-[52%] -top-[35%] translate-x-2
+    }
+
+    /* #endregion */
+    /* #region IMAGENES */
+
+    .imagen-paso-1 {
+        @apply w-48 h-28 translate-x-[10%] translate-y-[-50%]
+    }
+
+    .imagen-paso-2 {
+        @apply w-52 h-40 translate-x-[10%]
+    }
+
+    .imagen-paso-3 {
+        @apply w-52 h-28 translate-x-[10%] translate-y-[-50%]
+    }
+
+    .imagen-paso-4 {
+        @apply w-52 h-36 translate-x-[10%] translate-y-[-40%]
+    }
+
+    .imagen-paso-5 {
+        @apply w-52 h-28 translate-x-[10%] translate-y-[-20%]
+    }
+
+    .imagen-paso-6 {
+        @apply w-44 h-24 translate-x-[10%] translate-y-[-20%]
+    }
+
+    /* #endregion */
+
+
+    /* #region CONTENEDOR */
+
+    .grid-pasos {
+        @apply mx-[22%]
+    }
+
+    /* #endregion */
+}
