--- a/src/style/contacto.css
+++ b/src/style/contacto.css
@@ -9,7 +9,7 @@
 }
 
 .contenedor-formulario{
-    @apply bg-[#0b4ba2] z-20 mx-3 mt-10 mb-40 translate-x-1/3 
+    @apply bg-[#0b4ba2] z-20 mx-3 mt-10 mb-40 
     lg:translate-x-1/4 lg:w-2/3 h-1/2 grid lg:grid-cols-2 gap-7 rounded-3xl
 }
 
